k8s/infrastructure/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:

      labels:
        app: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: keycloak-db
            - name: DB_DATABASE
              value: keycloak
            - name: DB_PASSWORD
              value: password
            - name: DB_USER
              value: keycloak
            - name: DB_VENDOR
              value: POSTGRES
            - name: KEYCLOAK_ADMIN
              value: oldadmin
            - name: KEYCLOAK_ADMIN_PASSWORD
              value: oldadmin
          image: codingpuss/keycloak-silicon:16.1.1
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /opt/keycloak/data/import/
              name: keycloak-claim0
      restartPolicy: Always
      volumes:
        - name: keycloak-claim0
          persistentVolumeClaim:
            claimName: keycloak-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
    - host: "auth.localtest.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
